@@ -21,6 +21,8 @@ next version - not yet released
  CHANGED: Ticket #519, Replace the "Next (Previous) Playlist Item" command by a
           "Next (Previous) File" command which can also be used to play the next
           (previous) file in folder without stopping at chapters.
+ CHANGED: Ticket #846, Use a different program id for x64 builds so that there
+          is no conflict over file associations between x86 and x64 builds.
  CHANGED: Updated libpng to v1.5.2
  CHANGED: Updated MediaInfoLib to v0.7.45
  CHANGED: Updated ZenLib to v0.4.20
